--- a/Practica/package.json
+++ b/Practica/package.json
@@ -15,6 +15,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-qr-code": "^2.0.15",
     "react-qr-reader": "^3.0.0-beta-1",
     "uuid": "^11.0.5"
